testsuite/tests/th/T19709a.stderr

T19709a.hs:8:14: error:
    A representation-polymorphic type is not allowed here:
      Type: a
      Kind: TYPE r
    In the type of binder ‘x’
